--- a/CRUD_App/CRUD_App/packages.config
+++ b/CRUD_App/CRUD_App/packages.config
@@ -4,12 +4,14 @@
   <package id="bootstrap" version="3.4.1" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="jQuery" version="3.4.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net452" />
@@ -21,5 +23,9 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net452" />
   <package id="NUnit" version="3.13.3" targetFramework="net452" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net452" />
+  <package id="Swashbuckle.Core.Net45" version="5.2.1" targetFramework="net452" />
+  <package id="Swashbuckle.Net45" version="5.2.1" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
