--- a/CRUD_App/CRUD_App/packages.config
+++ b/CRUD_App/CRUD_App/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.4.1" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="jQuery" version="3.4.1" targetFramework="net452" />
+  <package id="JWT" version="9.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Cors" version="5.2.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net452" />
@@ -17,6 +18,9 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net452" />
   <package id="Microsoft.CodeCoverage" version="17.1.0" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.17.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.17.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.17.0" targetFramework="net452" />
   <package id="Microsoft.NET.Test.Sdk" version="17.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
@@ -26,6 +30,7 @@
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net452" />
   <package id="Swashbuckle.Core.Net45" version="5.2.1" targetFramework="net452" />
   <package id="Swashbuckle.Net45" version="5.2.1" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.17.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
